--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,22 @@
   color: #61dafb;
 }
 
+.App-infospan {
+  text-align: left;
+}
+
+.App-navbar {
+  text-align: center;
+  position: fixed;
+  background-color: #444;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  height: 60px;
+  border-radius: 20px;
+  padding: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
